Bug 407224 - ColorSpace wrong option with P3 screens
Summary: ColorSpace wrong option with P3 screens
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 4.1.7
Platform: Other macOS
: NOR normal
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-05-04 21:42 UTC by Manga Tengu
Modified: 2019-05-07 07:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Manga Tengu 2019-05-04 21:42:00 UTC
As discussed with Wolthera, the following option may need to be hidden on new macbooks:
Color Management > Display > Use system monitor profile.

After switching all the color space options to display P3 and seeing no change, I just unchecked this box and the oversaturation is gone.
Comment 1 wolthera 2019-05-04 21:48:01 UTC
Mangatengu's issue was...

Images made in Krita look desaturated outside of Krita.
Her display is DCI-P3 as all modern mac books, but configuring it as such was difficult because the 'use system monitor profile' actually worked against it, making Krita think it was sRGB.

So what needs to be done is...

1. Figure out whether this option does anything at all on Mac, or is it only there for colord linux integration?
2. Is it having similar problems on windows?
3. Should we then hide it? Or should we clarify it?

I think this is definitely a usability speed bump.
Comment 2 vanyossi 2019-05-06 14:22:57 UTC
I will check how it work on macOS, but we will need someone to check no Windows
Comment 3 vanyossi 2019-05-07 07:38:12 UTC
Git commit 4ee7fb3b77e50b3799ef80fe9a843f3e9c6977c7 by Ivan Yossi.
Committed on 07/05/2019 at 06:16.
Pushed by rempt into branch 'master'.

Disable System Monitor Profile on non KisColorManager enabled platforms

On macOS having this checkbox "on" creates color differences between krita and the OS

M  +7    -0    libs/ui/dialogs/kis_dlg_preferences.cc

https://invent.kde.org/kde/krita/commit/4ee7fb3b77e50b3799ef80fe9a843f3e9c6977c7