Disable System Monitor Profile on non KisColorManager enabled platforms

On macOS having this checkbox "on" creates color differences between krita and the OS

BUG:407224